chore(seo): implement SEO meta tags and semantic html structure for landing page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mflow</title>
+    <title>mflow - Smart Retail POS & Inventory Management</title>
+    <meta name="description" content="mflow is the easiest way to manage stock, sales, expenses, and multiple shops. Automated reports, offline mode, and zero hidden fees. Perfect for growing retail businesses in Kenya." />
+    <meta name="keywords" content="POS Kenya, inventory management system, retail software, shop management, stock tracking, expense tracking, multi-shop POS, mflow, small business software" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mflow.co.ke/" /> <!-- Assuming a domain or placeholder -->
+    <meta property="og:title" content="mflow - Smart Retail POS & Inventory Management" />
+    <meta property="og:description" content="Manage stock, sales, and expenses with automated reports. The simple, reliable system for growing businesses." />
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="mflow - Smart Retail POS & Inventory Management" />
+    <meta property="twitter:description" content="Manage stock, sales, and expenses with automated reports. The simple, reliable system for growing businesses." />
   </head>
   <body>
     <div id="root"></div>
