--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/mflowpos.png" />
+  <link rel="icon" href="/mflow-favicon.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>mflow pos - Smart Retail POS & Inventory Management</title>
   <meta name="description"
